[package]
name = "net-mesh-sdk"
version = "0.23.0"
edition = "2021"
description = "Ergonomic Rust SDK for the Net mesh network"
license = "Apache-2.0"
repository = "https://github.com/ai-2070/net"
readme = "README.md"
keywords = ["net", "mesh", "event-bus", "streaming"]
categories = ["asynchronous", "network-programming"]
# Disable bench auto-discovery so shared helpers under
# `benches/nrpc_common/` aren't picked up as bench targets. Every
# bench is listed explicitly below.
autobenches = false

[lib]
# Keep the crate name as `net_sdk` so `use net_sdk::...` resolves
# without code changes; the published artifact is `net-mesh-sdk`
# on crates.io.
name = "net_sdk"

[dependencies]
# `version` is required for `cargo publish` to resolve the dep on
# crates.io; the `path` is preferred during local workspace builds.
net = { package = "net-mesh", version = "0.23.0", path = "..", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "time", "sync"] }
pin-project-lite = "0.2"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
criterion = { version = "0.8", features = ["async_tokio"] }
hdrhistogram = "7"
postcard = { version = "1", features = ["use-std"] }
rand = "0.10"

[features]
# Out-of-the-box "I downloaded the SDK and it just works": real
# mesh transport + NAT traversal + typed nRPC + capability-based
# service discovery + daemon supervision + replica/fork/standby
# coordination + MeshOS daemon-authoring + the dataforts blob
# storage surface + the MeshDB federated query plane. Picked so
# a web/Python/Node dev consuming the prebuilt binding artifact
# (where opting into features post-install isn't a thing) gets
# every primitive the protocol's pitch turns on, with no flags
# to discover.
#
# A Rust consumer who wants a leaner build opts out via
# `default-features = false` and picks what they need. The
# `agent` and `local` meta-features below name useful subsets.
#
# `port-mapping` / `redis` / `jetstream` stay opt-in: heavy
# UPnP/SOAP dep tree, or external transports most consumers
# don't need.
default = [
    "net",
    "nat-traversal",
    "cortex",
    "compute",
    "groups",
    "meshos",
    "dataforts",
    "meshdb",
    "aggregator",
]
# External transports (opt-in, network I/O).
redis = ["net/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport (encrypted UDP + subprotocols). Bundles the
# identity, capabilities, and subnet surfaces ÔÇö they all live behind
# `adapter::net` in core and are operationally inseparable (subnet
# enforcement reuses the capability-announcement dispatch; channel
# auth uses identity + capabilities + subnets together), so exposing
# them as separate SDK flags created pick-your-own-subset
# combinations that weren't actually meaningful.
net = ["net/net"]
# NAT traversal ÔÇö reflex probes, classification, and
# rendezvous-coordinated hole-punch. Exposes `Mesh::nat_type`,
# `reflex_addr`, `connect_direct`, `traversal_stats`,
# `probe_reflex`, and `reclassify_nat`. Off by default because
# the surface is optional: callers that rely solely on the
# routed-handshake path never need it. Framing: these APIs are
# *optimization, not correctness* ÔÇö routed-handshake reaches
# every peer regardless, and a `symmetric` NAT type or a
# `punch-failed` error just means traffic keeps riding the
# relay.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping ÔÇö opportunistic UPnP-IGD / NAT-PMP / PCP install
# at startup. Exposes `MeshBuilder::try_port_mapping(bool)` on
# the SDK surface. Builds on `nat-traversal` (the port-mapping
# task calls the same `set_reflex_override` / `clear_reflex_override`
# runtime setters). Off by default ÔÇö port mapping modifies
# state on the user's router and some environments forbid it.
port-mapping = ["nat-traversal", "net/port-mapping"]
# CortEX adds the typed event-sourced adapters (tasks + memories) plus
# the NetDb facade. `redex-disk` comes along so `.persistent(true)` is
# usable from the SDK without a separate feature flip.
cortex = ["net/netdb", "net/redex-disk"]
# Compute surface ÔÇö `MeshDaemon` trait + `DaemonRuntime` for local
# spawn / snapshot / stop. Requires `net` because daemons have a
# mesh identity (ed25519 keypair + origin_hash) that rides on the
# same `Identity` the channel-auth path uses.
compute = ["net"]
# HA / scaling overlays ÔÇö `ReplicaGroup` / `ForkGroup` /
# `StandbyGroup`. Sits on top of `compute`; a caller with just
# `compute` gets single-daemon spawn / snapshot / migration, and
# `groups` adds the N-member coordination primitives on top.
groups = ["compute"]
# MeshOS SDK ÔÇö daemon-author surface. Re-exports the
# substrate's `behavior::meshos::sdk` types and adds the
# `daemon_main!` macro entry point. Daemons that want to be
# supervised by MeshOS pull this feature on. Builds on
# `compute` for the `MeshDaemon` trait + `EntityKeypair`,
# and on `net/meshos` for the actual runtime.
meshos = ["compute", "net/meshos"]
# Deck SDK ÔÇö operator-side surface (the dual of `meshos`).
# Re-exports `behavior::deck` with `DeckClient`, `AdminCommands`,
# `SnapshotStream`, and the `OperatorIdentity` newtype. Builds
# on `meshos` for the runtime + snapshot reader. Phase 1 surface
# only ÔÇö `audit()` / `subscribe_logs()` / `ice()` land in later
# slices as the substrate's signed admin chain + blast-radius
# simulator come online.
deck = ["meshos"]
# Dataforts ÔÇö mesh-native blob storage adapter. Re-exports
# `adapter::net::dataforts::*` so operator-facing surfaces
# (the deck's DATAFORTS tab) can render real `BlobMetrics`
# instead of a fixture. Pulls in redex + redex-disk + blake3
# transitively via `net/dataforts`.
dataforts = ["net/dataforts"]
# MeshDB ÔÇö federated query plane above the substrate's chains.
# Re-exports the typed `MeshQuery` AST + `MeshQueryExecutor`
# + `ChainReader` so tenant tooling (and future Deck MeshDB
# Console) can compose queries without reaching through
# internal substrate paths. The substrate gates MeshDB on its
# own `meshdb` feature (Phase A of `MESHDB_PLAN.md`); this
# flag composes against it.
meshdb = ["net/meshdb"]
# Aggregator-registry RPC clients (`RegistryClient`,
# `FoldQueryClient`) + the daemon-author surface
# (`AggregatorRegistry`, `LifecycleGroup`, `HealthMonitor`).
# Riding `net` because every operation routes through
# `Mesh::call` / `Mesh::serve_rpc`. Named explicitly so a
# `--no-default-features` consumer can opt in by name ÔÇö and so
# the per-binding `aggregator` Cargo features have a 1:1 SDK
# counterpart to forward (`net-sdk/aggregator`).
aggregator = ["net"]
# Testing ÔÇö in-process multi-node `ClusterHarness` + bridge probes
# (Mesh Ôćĺ MeshOsRuntime). Powers the deck demo and any integration
# test that wants real UDP loopback + a real MeshOS snapshot fold
# across N nodes. See `DECK_DEMO_HARNESS_PLAN.md`. Lives behind a
# feature flag because the harness is dev-only ÔÇö never link the
# scaffolding into a release binary.
#
# Pulls `groups` so `ClusterHarness::spawn_replica_group` and
# siblings can compose against the real `ReplicaGroup` /
# `ForkGroup` / `StandbyGroup` primitives. `groups` transitively
# brings in `compute`.
testing = ["meshos", "groups"]
# Everything that runs locally (mesh + storage/state + security +
# compute + groups, no external transports). The default shape for
# a single-node or LAN-only deployment.
local = ["net", "cortex", "compute", "groups", "aggregator"]
# Named alias for the SDK's heavy default ÔÇö useful when a consumer
# has set `default-features = false` to pull a leaner build and
# later wants to opt back into "the full distributed-agent stack
# short of external transports / operator UI." Mirrors what the
# bindings ship by default (minus redis / jetstream).
agent = [
    "net",
    "nat-traversal",
    "cortex",
    "compute",
    "groups",
    "meshos",
    "dataforts",
    "meshdb",
    "aggregator",
]
# Everything ÔÇö local stack plus NAT traversal plus external
# transports plus the operator-facing surfaces. `dataforts` and
# `meshdb` are deliberately omitted: both pull substrate features
# that enlarge the dependency footprint (redex-disk, blake3, the
# meshdb query plane), and `full` is meant to be "the common
# bundle for an operator's full-stack daemon", not "every flag
# this crate exposes". Consumers that want dataforts blob storage
# or the MeshDB query plane add those flags explicitly.
full = ["local", "nat-traversal", "redis", "jetstream", "meshos", "deck"]

# nRPC quickstart ÔÇö requires net + cortex.
[[example]]
name = "nrpc_echo"
required-features = ["net", "cortex"]

# ============================================================================
# nRPC benchmark suite. See `benches/nrpc_common/mod.rs` for the
# shared in-process two-node harness, payload generators, and codec
# wrappers. All six benches require `net` + `cortex` (same gate as
# the typed RPC surface).
# ============================================================================

# Item 1 ÔÇö unary round-trip latency (empty / 32 B / 1 KiB) across
# two routing paths (direct + discovery) and three codecs
# (json / postcard / raw). Headline screenshot bench.
[[bench]]
name = "nrpc_unary"
harness = false
required-features = ["net", "cortex"]

# Item 2 ÔÇö unary throughput (QPS) at 1 / 16 / 128 concurrent
# callers ├Ś 32 B / 1 KiB / 16 KiB payloads.
[[bench]]
name = "nrpc_qps"
harness = false
required-features = ["net", "cortex"]

# Item 3 ÔÇö server-streaming msgs/sec via `call_streaming_typed`.
# Client-streaming and full duplex are channel-layer features and
# bench separately (not here).
[[bench]]
name = "nrpc_streaming"
harness = false
required-features = ["net", "cortex"]

# Item 4 ÔÇö tail latency under load. Custom main + hdrhistogram
# (Criterion is mediocre at p99.9). 16 / 64 / 256 in-flight.
[[bench]]
name = "nrpc_tail"
harness = false
required-features = ["net", "cortex"]

# Item 5 ÔÇö connection / handshake churn. 1000 peer pairs, full
# latency histogram for pair-creation + handshake + first RPC.
# Custom main + hdrhistogram.
[[bench]]
name = "nrpc_churn"
harness = false
required-features = ["net", "cortex"]

# Item 6 ÔÇö large-payload efficiency. 1 MiB / 4 MiB / 16 MiB
# unary, `Throughput::Bytes` for MB/s reporting. CPU% / alloc
# tracking is deferred to a follow-up profiling binary.
[[bench]]
name = "nrpc_payload"
harness = false
required-features = ["net", "cortex"]

# Phase F ÔÇö client-streaming throughput. Caller pushes N typed
# requests; server collects all + returns one terminal Resp.
# Measures msgs/sec across N=16/256 x 64B/1KiB payloads.
[[bench]]
name = "nrpc_client_streaming"
harness = false
required-features = ["net", "cortex"]

# Phase F ÔÇö duplex round-trip throughput. Caller streams N
# requests, server emits one Resp per Req. into_split lets send
# + recv run in independent tasks (the realistic shape).
[[bench]]
name = "nrpc_duplex"
harness = false
required-features = ["net", "cortex"]
